fixing vertical alignment of fields in the ticket summary - #348
git-svn-id: https://svn.apache.org/repos/asf/incubator/bloodhound/trunk@1431296 13f79535-47bb-0310-9956-ffa450edef68

--- a/bloodhound_theme/bhtheme/htdocs/bloodhound.css
+++ b/bloodhound_theme/bhtheme/htdocs/bloodhound.css
@@ -218,7 +218,7 @@ pre.wiki {
   padding-left: 5px;
 }
 
-.ticket .properties .enum h5 {
+.ticket .properties .enum h5, #basic-properties h5 {
   margin-top: 0px;
 }
 
